recursion.lessons.recursion.koch.Koch.scala.error
Koch:16: error: not found: value snowside
			snowside(levels-1,length/3)
                        ^Koch:18: error: not found: value snowside
			snowside(levels-1,length/3)
                        ^Koch:20: error: not found: value snowside
			snowside(levels-1,length/3)
                        ^Koch:22: error: not found: value snowside
			snowside(levels-1,length/3)	
                        ^